Encrypt save data (profile/settings) with AES-256-GCM
Currency, owned/equipped items, and settings were plain-text JSON,
trivially editable to grant currency or unlock store items for free.
Now encrypted (renamed .json -> .dat to signal the format change);
GCM's auth tag also means a tampered or corrupted file is detected
and the game resets to defaults instead of loading bad data.

Verified: a fresh save round-trips correctly, the file is unreadable
binary (not inspectable JSON), and a hand-corrupted file is rejected
with a clean fallback rather than a crash.

Honest limit documented in the README: the key lives in the client
jar, so this stops casual save editing, not a determined attacker
with the binary - inherent to any client-side save encryption.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017DH2TvQyyQbmEL96HRUK4k